--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,8 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
 } 
