--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,9 @@
   ],
   "version": 2,
   "buildCommand": "npm run build",
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "framework": "vite",
+  "installCommand": "npm install",
+  "devCommand": "npm run dev",
+  "regions": ["bom1"]
 } 
